[package]
name = "dhcpd-rs"
version = "0.1.0"
authors = ["Matt Weller <hellmitre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.3", features = ["reuseport"] }
fastping-rs = "0.2"
pretty_env_logger = "0.4"
log = "0.4"
