[package]
name = "dhcpd-rs"
version = "0.1.0"
authors = ["Matt Weller <hellmitre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "arp_server"
path = "src/arp/server.rs"

[[bin]]
name = "dhcpd-rs"
path = "src/main.rs"

[dependencies]
socket2 = { version = "0.3", features = ["reuseport"] }
libc = "0.2"
